--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,9 @@ indent_style = space
 indent_style = space
 indent_size = 4
 
+[*.md]
+trim_trailing_whitespace = false
+
 [_testdata/**]
 charset = unset
 indent_size = unset
